--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row text-center">
+            <div class="row">
                 <div class="col-md-4 col-md-offset-2">
                     <p class="text-muted">I am a Python developer with data engineering background. My professional experiences ranges across API development, natural language processing, business intelligence dashboard, and machine learning. I also have strong interests in search engines and data visualization.</p>
                 </div>
@@ -201,62 +201,143 @@
                     <ul class="timeline">
                         <li class="timeline">
                             <div class="timeline-image">
-                                <h4><br />Present</h4>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>2009-2011</h4>
-                                    <h4 class="subheading">Our Humble Beginnings</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                                <h4>
+                                    2016<br />
+                                    -<br />
+                                    Present
+                                </h4>
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>March 2011</h4>
-                                    <h4 class="subheading">An Agency is Born</h4>
+                                    <h4>Self Employed</h4>
+                                    <h4 class="subheading">Python Developer</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>December 2012</h4>
-                                    <h4 class="subheading">Transition to Full Service</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Developed backend RESTful API for dating application with scalable matching algorithm using Python and MongoDB.</p>
                                 </div>
                             </div>
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                                <h4>
+                                    2014<br />
+                                    -<br />
+                                    2015
+                                </h4>
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>July 2014</h4>
-                                    <h4 class="subheading">Phase Two Expansion</h4>
+                                    <h4>Decisive</h4>
+                                    <h4 class="subheading">Data Engineer</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Architected data pipeline for processing over 500M data points a day with Python and Redis Queue. Created RESTful realtime reporting API using Flask, Aerospike, and Amazon Redshift. Developed web application for analyzing Facebook and Instagram marketing contents with Python, Redis Queue, and MongoDB. Developed an MVP within 2 weeks for company pivot during TechStars Accelerator program. Supported existing mobile advertisement web application in Django and MongoDB
+Enriched raw mobile data with external information.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="timeline-image">
+                                <h4>
+                                    2013<br />
+                                    -<br />
+                                    2014
+                                </h4>
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>Applied AI</h4>
+                                    <h4 class="subheading">Data Scientist</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Developed MVP through rapid iterations using Python and NLP technology. Consulted as NLP and machine learning specialist. Determined technical requirements from business requirements.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <h4>
+                                    2012<br />
+                                    -<br />
+                                    2013
+                                </h4>
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>Soshio</h4>
+                                    <h4 class="subheading">Founder, CTO</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Managed product development, determined success requirements, and conducted necessary market research. Developed proprietary NLP and machine learning engine for analyzing the Chinese language in Python. Developed web application for delivering social intelligence using Flask, CouchDB, and D3.js. Created infrastructure to acquire and process Weibo (Chinese Twitter) data. Engage with sales prospects and support existing clients as technical consult. Represented the team in conferences and media. Onboarded and trained new hires.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline">
+                            <div class="timeline-image">
+                                <h4>
+                                    2010<br />
+                                    -<br />
+                                    2012
+                                </h4>
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>Skyscanner</h4>
+                                    <h4 class="subheading">Developer</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Developed public facing RESTful search API in C# .NET and RabbitMQ. Maintained and upgraded web scraping framework for acquiring travel data in Python and PostgreSQL. Created and updated scrapers in Python for individual airline websites. Support production web scraper pool in CentOS.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <h4>
+                                    2009<br />
+                                    -<br />
+                                    2010
+                                </h4>
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>University of Edinburgh</h4>
+                                    <h4 class="subheading">MSc, Artificial Intelligence, Learning from Data</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Finalist for 2010 Scottish Institute for Enterprise New Idea Competition in Science, Engineering, Technology category. Learned and developed in Prolog for the MSc dissertation. Dissertation in Experience Sharing for Ontology Repair System.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline">
+                            <div class="timeline-image">
+                                <h4>
+                                    2007<br />
+                                    -<br />
+                                    2009
+                                </h4>
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>Hewlett Packard</h4>
+                                    <h4 class="subheading">Software Engineer</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Automated tests for Window based application. Built test cases for testing web vulnerability scanner using C# .NET. Supported internal procurement web application with Java.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <h4>
+                                    2003<br />
+                                    -<br />
+                                    2007
+                                </h4>
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>Pennsylvania State University, University Park</h4>
+                                    <h4 class="subheading">BSc, Information Science and Techology, Design and Development</h4>
                                 </div>
                             </div>
                         </li>
